--- a/.htaccess
+++ b/.htaccess
@@ -17,10 +17,10 @@ RewriteEngine on
 RewriteCond %{HTTP_HOST} ^shalomshanti.com [NC]
 RewriteRule ^(.*)$ https://www.shalomshanti.com/$1 [L,R=301,NC]
 
-# Find php files
+# Find pages
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_URI} !\.(jpg|jpeg|png|css|svg|woff|ttf|otf)$
-RewriteRule ^(.+)$ $1.php [L,QSA]
+RewriteCond %{REQUEST_URI} !\.(js|css|jpg|jpeg|png|svg|woff|ttf|otf)$
+RewriteRule ^(.+)$ /shalomshanti/pages/$1.php [L,QSA]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.+).css$ $1.css.php [L,QSA]
