--- a/.htaccess
+++ b/.htaccess
@@ -28,7 +28,7 @@ RewriteRule ^templates/(.+)$ /shalomshanti/templates/$1.php [L,QSA]
 # Find pages
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !\.(js|css|jpg|jpeg|png|svg|woff|ttf|otf)$
-RewriteCond %{REQUEST_URI} ^!shalomshanti
+#RewriteCond %{REQUEST_URI} ^!shalomshanti
 RewriteRule ^(.+)$ /shalomshanti/pages/$1.php [L,QSA]
 
 RewriteCond %{REQUEST_FILENAME} !-f
