Load program as homepage until further notice

--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,10 @@ RewriteEngine on
 RewriteCond %{HTTP_HOST} ^shalomshanti.com [NC]
 RewriteRule ^(.*)$ https://www.shalomshanti.com/$1 [L,R=301,NC]
 
+# Load program as homepage until further notice
+RewriteCond %{HTTP_HOST} ^www.shalomshanti.com/?$ [NC]
+RewriteRule ^(.*)$ https://www.shalomshanti.com/program.pdf [L,R=302,NC]
+
 # Find apis
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^API/(.+)$ /shalomshanti/API/$1.php [L,QSA]
